# slint-game

./: Cargo.toml  build.rs  index.html
.github/workflows/: rust.yml
src/: main.rs
ui/: appwindow.slint
