[package]
name = "slint-game"
version = "0.1.0"
authors = ["alteveded"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
